Preventing defaults and hiding overflow

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: #000;
+  overflow:hidden;
 }
 canvas {
   /*position: absolute;
